[package]
name = "telemetry"
version = "0.1.0"
authors = ["beeleph <isjironn@gmail.com>"]
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
